Removed high contrast handling in Toaster fixes #158
    - removed .dj_a11y in Toaster css
    - changed the documentation
    - remove icon container in template

--- a/Toaster/themes/bootstrap/Toaster.css
+++ b/Toaster/themes/bootstrap/Toaster.css
@@ -131,9 +131,6 @@ button.d-toaster-dismiss {
   margin: .5em;
   border: 1px transparent solid;
 }
-.dj_a11y .d-toaster-message {
-  border: .2em black solid;
-}
 .d-toaster-dismiss {
   position: relative;
   top: -5px;
@@ -141,46 +138,28 @@ button.d-toaster-dismiss {
 }
 .d-toaster-message {
   -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
-}
-.dj_a11y .d-toaster-message .d-toaster-icon::before {
-  font-family: "webdings";
-  font-size: 2em;
-  margin-right: 1em;
-  line-height: .5em;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
 }
 .d-toaster-type-info {
   background: #d9edf7;
   border-color: #bce8f1;
   color: #31708f;
 }
-.dj_a11y .d-toaster-type-info .d-toaster-icon::before {
-  content: "i";
-}
 .d-toaster-type-warning {
   background-color: #fcf8e3;
   border-color: #faebcc;
   color: #8a6d3b;
-}
-.dj_a11y .d-toaster-type-warning .d-toaster-icon::before {
-  content: "U";
 }
 .d-toaster-type-success {
   background-color: #dff0d8;
   border-color: #d6e9c6;
   color: #3c763d;
 }
-.dj_a11y .d-toaster-type-success .d-toaster-icon::before {
-  content: "a";
-}
 .d-toaster-type-error {
   background-color: #f2dede;
   border-color: #ebccd1;
   color: #a94442;
-}
-.dj_a11y .d-toaster-type-error .d-toaster-icon::before {
-  content: "x";
 }
